--- a/about.html
+++ b/about.html
@@ -74,8 +74,8 @@
                 <a href="https://index-01.vercel.app/" class="b"><i class="fa-solid fa-house" ></i> </a>
                 </div>
             <div class="box" id="color_changer_effect"> 
-                <a href="/Portfolio/about.html" class="a">About_Me</a>
-                <a href="/Portfolio/about.html" class="b"><i class="fa-solid fa-user"></i></a>
+                <a href="https://index-01.vercel.app/" class="a">About_Me</a>
+                <a href="https://index-01.vercel.app/" class="b"><i class="fa-solid fa-user"></i></a>
             </div>
             <div class="box" id="color_changer_effect">
                 <a href="/Portfolio/Education.html" class="a" >Education</a>
