--- a/about.html
+++ b/about.html
@@ -69,26 +69,12 @@
         </div>
         <!-- nav_bar -->
         <div class="main_container_bio_nav" >
-            <div class="box" id="color_changer_effect">
-                <a href="https://index-01.vercel.app/" class="a" >Home</a> 
-                <a href="https://index-01.vercel.app/" class="b"><i class="fa-solid fa-house" ></i> </a>
-                </div>
+           
             <div class="box" id="color_changer_effect"> 
-                <a href="https://index-01.vercel.app/" class="a">About_Me</a>
-                <a href="https://index-01.vercel.app/" class="b"><i class="fa-solid fa-user"></i></a>
+                <a href="#" class="a">About_Me</a>
+                <a href="#" class="b"><i class="fa-solid fa-user"></i></a>
             </div>
-            <div class="box" id="color_changer_effect">
-                <a href="/Portfolio/Education.html" class="a" >Education</a>
-                <a href="/Portfolio/Education.html" class="b"><i class="fa-solid fa-graduation-cap"></i></i></a>
-            </div>
-            <div class="box" id="color_changer_effect">
-                <a href="/Portfolio/project.html" class="a" >Project</a>
-                <a href="/Portfolio/project.html" class="b"><i class="fa-solid fa-suitcase"></i></a>
-            </div>
-            <div class="box" id="color_changer_effect">
-                <a href="#" class="a" >Contact</a>
-                <a href="#" class="b"><i class="fa-regular fa-id-badge"></i></a>
-            </div>
+            
         </div>
     </div>
    
