--- a/about.html
+++ b/about.html
@@ -71,8 +71,8 @@
         <div class="main_container_bio_nav" >
            
             <div class="box" id="color_changer_effect"> 
-                <a href="#" class="a">About_Me</a>
-                <a href="#" class="b"><i class="fa-solid fa-user"></i></a>
+                <a href="https://www.google.co.in/" class="a">About_Me</a>
+                <a href="https://www.google.co.in/" class="b"><i class="fa-solid fa-user"></i></a>
             </div>
             
         </div>
