--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <span class="info_name">Address : <span class="info_details">Asansol, West Bengal</span></span> <br>
 
                         <span class="info_name">Degree : <span class="info_details">B.Tech (IT)</span></span> <br>
-                        <span class="info_name">Language : <span class="info_details">Englis, Hindi</span></span> <br>
+                        <span class="info_name">Language : <span class="info_details">English, Hindi</span></span> <br>
                         <span class="info_name">Phone No. : <span class="info_details">9732206604</span></span> <br>
                         
                     </div>
