--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                     <a href="https://education-and-skills-z9j4.vercel.app/" class="b"><i class="fa-solid fa-graduation-cap"></i></i></a>
                 </div>
                 <div class="box" id="color_changer_effect">
-                    <a href="/Portfolio/project.html" class="a" >Project</a>
-                    <a href="/Portfolio/project.html" class="b"><i class="fa-solid fa-suitcase"></i></a>
+                    <a href="https://project-section.vercel.app/" class="a" >Project</a>
+                    <a href="https://project-section.vercel.app/" class="b"><i class="fa-solid fa-suitcase"></i></a>
                 </div>
                 <div class="box" id="color_changer_effect">
                     <a href="#" class="a" >Contact</a>
